ride_1_m/log.txt
False: Non-zero return code, probably a syntax error occurred\ntime=1654858040.4891555 gym-duckietown 2019.0.0

time=1654858040.7577899 Registering gym environment id: Duckietown-4way-v0
time=1654858040.7579587 Registering gym environment id: Duckietown-loop_dyn_duckiebots-v0
time=1654858040.758056 Registering gym environment id: Duckietown-loop_empty-v0
time=1654858040.7581933 Registering gym environment id: Duckietown-loop_obstacles-v0
time=1654858040.7582917 Registering gym environment id: Duckietown-loop_pedestrians-v0
time=1654858040.75842 Registering gym environment id: Duckietown-small_loop-v0
time=1654858040.758532 Registering gym environment id: Duckietown-small_loop_cw-v0
time=1654858040.7586498 Registering gym environment id: Duckietown-straight_road-v0
time=1654858040.758736 Registering gym environment id: Duckietown-straight_road_10_tiles_no_start_tile-v0
time=1654858040.7588048 Registering gym environment id: Duckietown-straight_road_no_start_tile-v0
time=1654858040.7588909 Registering gym environment id: Duckietown-straight_road_trafficlight-v0
time=1654858040.7589786 Registering gym environment id: Duckietown-straight_road_with_side_floor-v0
time=1654858040.759077 Registering gym environment id: Duckietown-udem1-v0
time=1654858040.759207 Registering gym environment id: Duckietown-zigzag_dists-v0
Traceback (most recent call last):
  File "/usr/lib/python3.6/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/usr/lib/python3.6/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/ride_1_m/checker.py", line 6, in <module>
    checkers=[StopAtCoordinatesChecker()]
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/solution_evaluator.py", line 31, in __init__
    solution_file_as_module = importlib.import_module(self.args.solution_file_as_module)
  File "/usr/lib/python3.6/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 994, in _gcd_import
  File "<frozen importlib._bootstrap>", line 971, in _find_and_load
  File "<frozen importlib._bootstrap>", line 955, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 665, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 674, in exec_module
  File "<frozen importlib._bootstrap_external>", line 781, in get_code
  File "<frozen importlib._bootstrap_external>", line 741, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/appuser/aido-auto/gym-duckietown/gym_duckietown/tasks/ride_1_m/solutions/solution.py", line 12
    img, _, _, _ = env.step([1d,0])
                              ^
SyntaxError: invalid syntax
